Test for Chase/dev/2-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapplication
  namespace: dev
  labels:
    app: myapplication
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapplication
  template:
    metadata:
      labels:
        app: myapplication
    spec:
      containers:
      - name: myapplication-image
        image: myimage:dev
        ports:
        - containerPort: 8080
      livenessProbe:
        httpGet:
          path: /actuator/keepalive
          port: 8080
        initialDelaySeconds: 5
        periodSeconds: 5
      readinessProbe:
        httpGet:
          path: /actuator/keepalive
          port: 8080
        initialDelaySeconds: 5
        periodSeconds: 5
