Test for Chase/dev/3-service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapplication-service
  namespace: dev
spec:
  selector:
    app: myapplication  
  ports:
  - name: http-svc
    protocol: TCP
    port: 80
    targetPort: 8080
